# audio-snippet-detector

./: .gitignore  Cargo.toml  README.md  index.node.d.ts  package-lock.json  package.json  tsconfig.dist.json  tsconfig.json
.github/: .env
.github/actions/setup/: action.yml
.github/workflows/: cicd.yml  test.yml
crates/audio-snippet-detector/: Cargo.toml
crates/audio-snippet-detector/src/: db.rs  mfcc.rs  util.rs
src/: asd.rs  db.rs  index.cts  index.test.ts  lib.rs  load.cts  mfcc.rs  util.rs
test/: chime-01.raw  evening-01.raw  morning-01.raw
test/db/: area-notification-start.raw  chime.raw  evening.raw  morning.raw  town-notification-start.raw
ts/: index.test.ts  index.ts
